remove extra layers in responses